test/mutation_analysis/s0228_summary_ranges/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0228_summary_ranges/hafis/ablation_o3_r50/mutants/6/Solution.java:28: error: unreachable statement
        for (int i = 1; false; i++) {
                                    ^
1 error
